--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ethers": "^5.6.6",
+    "moralis": "^1.7.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-moralis": "^1.3.5",
+    "web3uikit": "^0.1.144"
   },
   "devDependencies": {
     "eslint": "8.15.0",
